Fixed footer aligning

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 footer {
-    position: fixed;
+    position: absolute;
     background-color: #112B4A;
     bottom: 0;
     left: 0;
